feat: 문의 기능 추가, 커스텀 예외 추가, service에서의 로그 레벨  수정