@@ -6,9 +6,6 @@ import lombok.*;
 
 import java.time.LocalDateTime;
 
-/**
- * 문의 대화의 개별 메시지를 나타내는 엔티티
- */
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @AllArgsConstructor(access = AccessLevel.PROTECTED)
 @Builder
@@ -39,26 +36,28 @@ public class InquiryMessage {
      * 메시지 생성 시 검증 및 연관 엔티티 업데이트
      */
     public static InquiryMessage create(Inquiry inquiry, User writer, String content) {
-        if (inquiry == null) {
-            throw new IllegalArgumentException("Inquiry는 필수입니다.");
+        boolean isSender   = writer.equals(inquiry.getSender());
+        boolean isReceiver = writer.equals(inquiry.getReceiver());
+        if (!isSender && !isReceiver) {
+            throw new IllegalArgumentException("메시지 작성자는 반드시 문의 작성자 또는 수신자여야 합니다.");
         }
-        if (writer == null) {
-            throw new IllegalArgumentException("Author는 필수입니다.");
-        }
-        if (content == null || content.isBlank()) {
-            throw new IllegalArgumentException("메시지 내용을 입력해주세요.");
+        if (content == null || content.trim().isEmpty()) {
+            throw new IllegalArgumentException("메시지 내용은 비어있을 수 없습니다.");
         }
 
-        InquiryMessage message = InquiryMessage.builder()
-                .inquiry(inquiry)
-                .writer(writer)
-                .content(content)
-                .createdAt(LocalDateTime.now())
-                .build();
+        InquiryMessage msg = new InquiryMessage();
+        msg.inquiry      = inquiry;
+        msg.writer       = writer;
+        msg.content      = content;
+        msg.createdAt    = LocalDateTime.now();
 
-        // Inquiry의 updatedAt 갱신
         inquiry.stampUpdated();
 
-        return message;
+        return msg;
+    }
+
+    // 연관관계 설정용 setter, 외부에서 못 쓰도록 접근제어 좁힘
+    void setInquiry(Inquiry inquiry) {
+        this.inquiry = inquiry;
     }
 }
